--- a/Style/StyleCS.css
+++ b/Style/StyleCS.css
@@ -255,7 +255,7 @@ a{
 	background-color: rgba(255, 255, 255, 1);
 }
 
-@media screen and (max-width: 750px){
+@media screen and (max-width: 19.5cm){
 	#main-menu {
 		border-radius: 0;
 		width: 100%
